@@ -5,6 +5,7 @@ efind (0.4-0) unstable; urgency=low
   * CHANGE: search extensions in /usr/lib/efind
   * CHANGE: renamed --list-extensions option to --print-extensions
   * CHANGE: renamed --show-blacklist option to --print-blacklist
+  * CHANGE: don't abort import of extensions if a single import fails
   * FIX: recognize regex and iregex attributes
   * FIX: allow filter functions as first function argument
   * FIX: always return error code if find child process fails
